--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         </ul>
     </div>
 
+    <div class="bloc-presentation">
+        <h1>Bienvenue sur Movies Discovery</h1>
+        <p>Ici, vous pouvez découvrir ou redécouvrir des films parmi une large bibliothèque !</p>
+    </div>
+
     <div class="home-content">
         <div id="movieslist" class="movieslist">
 
